# mdb

./: .gitignore  Cargo.toml  README.md  notepad  plan1.md
crates/fdc-analytics/: Cargo.toml
crates/fdc-analytics/src/: aggregation.rs  batch.rs  config.rs  indicators.rs  lib.rs  metrics.rs  ml.rs  models.rs  pipeline.rs  risk.rs  stream.rs  windowing.rs
crates/fdc-api/: Cargo.toml
crates/fdc-api/src/: auth.rs  config.rs  errors.rs  graphql.rs  grpc.rs  handlers.rs  lib.rs  metrics.rs  middleware.rs  models.rs  rest.rs  server.rs  websocket.rs
crates/fdc-cli/: Cargo.toml
crates/fdc-common/: Cargo.toml
crates/fdc-core/: Cargo.toml
crates/fdc-core/examples/: fdc_core_demo.rs
crates/fdc-core/src/: config.rs  error.rs  lib.rs  memory.rs  metrics.rs  time.rs  type_registry.rs  types.rs  wasm_bridge.rs
crates/fdc-ingestion/: Cargo.toml
crates/fdc-ingestion/examples/: ingestion_demo.rs
crates/fdc-ingestion/src/: backpressure.rs  batch.rs  buffer.rs  config.rs  lib.rs  metrics.rs  parser.rs  protocols.rs  receiver.rs  recovery.rs  validator.rs
crates/fdc-proto/: Cargo.toml
crates/fdc-query/: Cargo.toml
crates/fdc-query/examples/: query_demo.rs
crates/fdc-query/src/: aggregates.rs  cache.rs  config.rs  engine.rs  executor.rs  filters.rs  functions.rs  joins.rs  lib.rs  metrics.rs  optimizer.rs  parser.rs  planner.rs  projections.rs  sorts.rs
crates/fdc-server/: Cargo.toml
crates/fdc-storage/: Cargo.toml
crates/fdc-storage/examples/: storage_demo.rs
crates/fdc-storage/src/: backup.rs  cache.rs  compression.rs  config.rs  engine.rs  index.rs  lib.rs  metrics.rs  replication.rs  shard.rs  tier.rs
crates/fdc-storage/src/engines/: duckdb.rs  memory.rs  mod.rs  redb.rs  rocksdb.rs
crates/fdc-transform/: Cargo.toml
crates/fdc-types/: Cargo.toml
crates/fdc-types/examples/: types_demo.rs
crates/fdc-types/src/: conversion.rs  definition.rs  financial.rs  introspection.rs  lib.rs  registry.rs  schema.rs  serialization.rs  validation.rs  wasm_types.rs
crates/fdc-wasm/: Cargo.toml
crates/fdc-wasm/examples/: wasm_plugin_demo.rs
crates/fdc-wasm/src/: bridge.rs  events.rs  lib.rs  loader.rs  metrics.rs  plugin.rs  registry.rs  runtime.rs  security.rs  types.rs
