[package]
name = "fdc-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Core types and utilities for Financial Data Center"

[dependencies]
# 序列化
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# 时间处理
chrono = { workspace = true }

# 数值计算
rust_decimal = { workspace = true }
num-bigint = { workspace = true }
num-rational = { workspace = true }

# UUID生成
uuid = { workspace = true }

# 错误处理
anyhow = { workspace = true }
thiserror = { workspace = true }

# 日志
tracing = { workspace = true }

# 内存管理
bumpalo = { workspace = true }

# 并发
parking_lot = { workspace = true }
crossbeam = { workspace = true }

# 配置管理
toml = "0.8"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
criterion = { workspace = true }
proptest = { workspace = true }
