[package]
name = "fdc-ingestion"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
# 核心依赖
fdc-core = { path = "../fdc-core" }
# fdc-storage = { path = "../fdc-storage" } # 暂时注释掉
fdc-types = { path = "../fdc-types" }

# 异步运行时
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
async-trait = "0.1"

# 网络和序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
bytes = "1.5"

# 网络协议支持
tonic = "0.10"
prost = "0.12"
quinn = "0.10"  # QUIC协议支持
tokio-tungstenite = "0.20"  # WebSocket支持

# 性能和监控
tracing = "0.1"
metrics = "0.21"
parking_lot = "0.12"

# 压缩和编码
flate2 = "1.0"
lz4_flex = "0.11"
zstd = "0.13"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 并发和同步
crossbeam = "0.8"
dashmap = "5.5"

# 配置和序列化
config = "0.13"
toml = "0.8"
csv = "1.3"

# 系统信息
num_cpus = "1.16"

# 正则表达式
regex = "1.10"

# UUID生成
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"
proptest = "1.4"

# 基准测试将在后续添加
# [[bench]]
# name = "ingestion_benchmark"
# harness = false
