[package]
name = "fdc-query"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "High-performance query engine for Financial Data Center"

[dependencies]
# 核心依赖
fdc-core = { path = "../fdc-core" }
fdc-storage = { path = "../fdc-storage" }
fdc-types = { path = "../fdc-types" }
fdc-wasm = { path = "../fdc-wasm" }

# 序列化
serde = { workspace = true }
serde_json = { workspace = true }

# 错误处理
anyhow = { workspace = true }
thiserror = { workspace = true }

# 日志
tracing = { workspace = true }

# 异步运行时
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# 并发
parking_lot = { workspace = true }
dashmap = { workspace = true }

# 时间
chrono = { workspace = true }

# UUID生成
uuid = { workspace = true }

# SQL解析
sqlparser = "0.49"

# Apache Arrow (移除大型依赖以节省空间)
# arrow = "53.0"
# arrow-flight = "53.0"
# datafusion = "42.0"

# 数学计算
num-traits = "0.2"

# 哈希
ahash = "0.8"

# 正则表达式
regex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
criterion = { workspace = true }
tempfile = "3.8"
